KCPQ_Project/objects/KCPQ_Quick_Link__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labels__c</fullName>
        <label>Labels</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <label>Quick Link</label>
    <listViews>
        <fullName>All_Quick_Links</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Link__c</columns>
        <columns>Order__c</columns>
        <columns>Labels__c</columns>
        <columns>isActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Quick Links</label>
    </listViews>
    <nameField>
        <label>Quick Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quick Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>